# knowledge-flow

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile-devcontainer  devcontainer.json  docker-compose-devcontainer.yml
config/: .env.template  configuration.yaml
deploy/charts/: README.md
deploy/charts/knowledge-flow-backend/: Chart.yaml  values.yaml
deploy/docker-compose/: README.md  bidgpt-compose.sh  docker-compose.yml
deploy/docker-compose/backend/: .env-docker-compose
deploy/docker-compose/keycloak/: app-realm.json  bidgpt-realm.json
deploy/docker-compose/minio-post-install-job/: ro-policy.json  rw-policy.json
deploy/docker-compose/opensearch/: config.yml  internal_users.yml  opensearch.yml  roles.yml  roles_mapping.yml
deploy/docker-compose/opensearch-dashboards/: opensearch-dashboards.yml
deploy/docker-compose/opensearch-post-install-job/: create_indice.sh  create_users_and_roles.sh  mapping-chat.json  mapping-metadata.json  mapping-sessions.json  mapping-vector.json  mapping.json  wait_for_os_init.sh
deploy/docker-compose/opensearch-pre-install-job/: create_self_certs.sh
dockerfiles/: Dockerfile-dev  Dockerfile-prod
knowledge_flow_app/: application_context.py  main.py
knowledge_flow_app/common/: structures.py  utils.py
knowledge_flow_app/config/: content_store_gcs_settings.py  content_store_local_settings.py  content_store_minio_settings.py  embedding_azure_apim_settings.py  embedding_azure_openai_settings.py  embedding_ollama_settings.py  embedding_openai_settings.py  local_vector_store_settings.py  metadata_store_local_settings.py  ollama_settings.py  opensearch_settings.py
knowledge_flow_app/config/chat_profile/: chat_profile_store_local_settings.py  chat_profile_store_minio_settings.py
knowledge_flow_app/controllers/: chat_profile_controller.py  content_controller.py  ingestion_controller.py  metadata_controller.py  vector_search_controller.py
knowledge_flow_app/input_processors/: base_input_processor.py
knowledge_flow_app/input_processors/csv_tabular_processor/: csv_tabular_processor.py
knowledge_flow_app/input_processors/docx_markdown_processor/: docx_markdown_processor.py
knowledge_flow_app/input_processors/markdown_markdown_processor/: markdown_markdown_processor.py
knowledge_flow_app/input_processors/pdf_markdown_processor/: pdf_markdown_processor.py
knowledge_flow_app/input_processors/pps_tabular_processor/: pps_tabular_processor.py
knowledge_flow_app/input_processors/pptx_markdown_processor/: pptx_markdown_processor.py
knowledge_flow_app/input_processors/text_markdown_processor/: text_markdown_processor.py
knowledge_flow_app/output_processors/: base_output_processor.py  empty_output_processor.py
knowledge_flow_app/services/: chat_profile_service.py  content_service.py  ingestion_service.py  input_processor_service.py  metadata_service.py  output_processor_service.py  vector_search_service.py
knowledge_flow_app/tests/: conftest.py  test_ingestion_service.py
(+54 files in other folders)
